setup for eregistrations

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="site-header">
+<header class="site-header sticky navbar-fullwidth navbar-transparent">
 
   <!-- Top navbar & branding -->
   <nav class="navbar navbar-default">
@@ -16,23 +16,31 @@
           <span class="icon-bar"></span>
         </button>
 
-        <a class="navbar-brand" href="{{ site.baseurl }}">{{ site.title }}</a>
+        <a class="navbar-brand" href="/">{{ site.title }}</a>
       </div>
       <!-- END Toggle buttons and brand -->
 
       <!-- Top navbar -->
       <div id="navbar" class="navbar-collapse collapse" aria-expanded="true" role="banner">
         <ul class="nav navbar-nav navbar-right">
-        {% for my_page in site.pages %}
-          {% if my_page.title %}
-          <li><a href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a></li>
-          {% endif %}
-        {% endfor %}
+          <li class="active"><a href="{{ site.baseurl }}">Documentation</a></li>
+          <li><a href="{{ 'faq' | prepend: site.baseurl }}">FAQ</a></li>
         </ul>
       </div>
       <!-- END Top navbar -->
     </div>
   </nav>
   <!-- END Top navbar & branding -->
+
+  {% if page.path == 'index.html' %}  
+  <div class="banner banner-full-height overlay-black" style="background-image: url({{ site.baseurl }}/assets/img/banner1.jpg);">
+    <div class="container text-center">
+      <h1>eRegistrations documentation</h1>
+      <h5><strong>eRegistrations</strong> is an eGovernment system, designed to computerize simple or complex administrative procedures.</h5>
+      <br><br><br><br>
+      <p><a class="btn btn-white btn-xl btn-outline" href="#content" role="button"> Getting Started </a></p>
+    </div>
+  </div>
+  {% endif %}
 
 </header>
