--- a/_layouts/doc-pages.html
+++ b/_layouts/doc-pages.html
@@ -12,9 +12,9 @@
     		
     		<aside class="col-md-3 col-sm-3 sidebar">
     			<ul class="sidenav dropable sticky">
-    			 <li class="{% if page.path == 'index.html' %}active{% endif %}"><a href={{ site.baseurl }}>Overview</a></li> 
-    			 <li class="{% if page.path == 'framework.markdown' %}active{% endif %}"><a href={{ 'framework' | prepend: site.baseurl }}>Base framework</a></li>
-    			 <li class="{% if page.path == 'installation.markdown' %}active{% endif %}"><a href={{ 'installation' | prepend: site.baseurl }}>Installation</a></li>
+    			 <li class="{% if page.path == 'index.html' %}active{% endif %}"><a href="/">Overview</a></li> 
+    			 <li class="{% if page.path == 'framework.markdown' %}active{% endif %}"><a href="/framework">Base framework</a></li>
+    			 <li class="{% if page.path == 'installation.markdown' %}active{% endif %}"><a href="/installation">Installation</a></li>
     			</ul>
     		</aside>
 
