--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ "/assets/css/theDocs.all.min.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="{{ "/assets/css/skin-teal.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/assets/css/custom.css" | prepend: site.baseurl }}">
 
   <!-- FONTS -->
