About link and hide home banner

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,11 +7,7 @@
       </div>
       <div class="col-md-6 col-sm-6">
         <ul class="footer-menu">
-          {% for my_page in site.pages %}
-            {% if my_page.title %}
-            <li><a href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a></li>
-            {% endif %}
-          {% endfor %}
+            <li><a href="//businessfacilitation.org/eregistrations/" target="_blank">About</a></li>
         </ul>
       </div>
     </div>
