--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,8 +23,8 @@
       <!-- Top navbar -->
       <div id="navbar" class="navbar-collapse collapse" aria-expanded="true" role="banner">
         <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a href="{{ site.baseurl }}">Documentation</a></li>
-          <li><a href="{{ 'faq' | prepend: site.baseurl }}">FAQ</a></li>
+          <li class="{% if page.path != '/faq.markdown' %}active{% endif %}"><a href="/">Documentation</a></li>
+          <li class="{% if page.path == '/faq.markdown' %}active{% endif %}"><a href="/faq">FAQ</a></li>
         </ul>
       </div>
       <!-- END Top navbar -->
