Adds favicon in head

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,6 +6,8 @@
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
+  <link rel="shortcut icon" href="{{ "favicon.ico" | prepend: site.baseurl }}" type="image/x-icon">
+
   <!-- CSS -->
   <link rel="stylesheet" href="{{ "/assets/css/theDocs.all.min.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="{{ "/assets/css/skin-teal.css" | prepend: site.baseurl }}">
